--- a/assets/styles/src/main.scss
+++ b/assets/styles/src/main.scss
@@ -1,1 +1,48 @@
-//
+//Vendor
+
+
+// Abstracts
+@import './abstracts/variables.scss';
+@import './abstracts/mixins.scss';
+
+@import './abstracts/wp-core.scss';
+
+@import './abstracts/content-sectioning.scss';
+@import './abstracts/forms.scss';
+@import './abstracts/image-multimedia.scss';
+@import './abstracts/inline-text-semantics.scss';
+@import './abstracts/sectioning-root.scss';
+@import './abstracts/table-content.scss';
+@import './abstracts/text-content.scss';
+
+
+// Atoms
+@import './atoms/a-dividedIcon.scss';
+@import './atoms/a-rowLabel.scss';
+
+
+// Molecules
+@import './molecules/m-capabilityRow.scss';
+@import './molecules/m-ctaCard.scss';
+@import './molecules/m-footerContact.scss';
+@import './molecules/m-footerLink.scss';
+@import './molecules/m-footerLinks.scss';
+@import './molecules/m-footerSocial.scss';
+@import './molecules/m-marketingBlock.scss';
+@import './molecules/m-navigationRow.scss';
+
+
+// Organisms
+@import './organisms/o-callToAction.scss';
+@import './organisms/o-copyrightContent.scss';
+@import './organisms/o-capabilityStack.scss';
+@import './organisms/o-featureSlider.scss';
+@import './organisms/o-footerContent.scss';
+@import './organisms/o-footerLinks.scss';
+@import './organisms/o-industrySlider.scss';
+@import './organisms/o-marketingBlocks.scss';
+@import './organisms/o-navigationMenu.scss';
+
+
+// Pages
+@import './pages/homepage.scss';
