Updated category landing page layout styles

--- a/assets/styles/src/main.scss
+++ b/assets/styles/src/main.scss
@@ -17,11 +17,13 @@
 
 
 // Atoms
+@import './atoms/a-blockLabel.scss';
 @import './atoms/a-dividedIcon.scss';
 @import './atoms/a-rowLabel.scss';
 
 
 // Molecules
+@import './molecules/m-capabilityBlock.scss';
 @import './molecules/m-capabilityRow.scss';
 @import './molecules/m-ctaCard.scss';
 @import './molecules/m-footerContact.scss';
@@ -33,6 +35,7 @@
 
 
 // Organisms
+@import './organisms/o-capabilityBlocks.scss';
 @import './organisms/o-callToAction.scss';
 @import './organisms/o-copyrightContent.scss';
 @import './organisms/o-capabilityStack.scss';
@@ -40,9 +43,12 @@
 @import './organisms/o-footerContent.scss';
 @import './organisms/o-footerLinks.scss';
 @import './organisms/o-industrySlider.scss';
+@import './organisms/o-introContent.scss';
 @import './organisms/o-marketingBlocks.scss';
 @import './organisms/o-navigationMenu.scss';
+@import './organisms/o-supplementaryContent.scss';
 
 
 // Pages
+@import './pages/categoryLanding.scss';
 @import './pages/homepage.scss';
