--- a/resources/styles/src/components/organisms/_o-featuredImage.scss
+++ b/resources/styles/src/components/organisms/_o-featuredImage.scss
@@ -1,11 +1,11 @@
 .o-featuredImage {
   align-items: center;
   display: flex;
-  justify-content: center;
   width: 100%;
 
   .o-featuredImage__image {
     height: auto;
-    width: 100%;
+    margin: 0 auto;
+    width: 95%;
   }
 }
