--- a/resources/styles/src/components/pages/_homepage.scss
+++ b/resources/styles/src/components/pages/_homepage.scss
@@ -14,3 +14,18 @@
     width: 100%;
   }
 }
+
+#marketingBlocks {
+  background-image: url("../../../resources/images/src/jpg/home-marketing-blocks.jpg");
+  background-size: cover;
+}
+#callToAction {
+  margin: 0 auto;
+  max-width: 1300px;
+  width: 100%;
+}
+#footerLinks {
+  margin: 0 auto;
+  max-width: 1300px;
+  width: 100%;
+}
