--- a/resources/styles/src/components/molecules/_m-marketingBlock.scss
+++ b/resources/styles/src/components/molecules/_m-marketingBlock.scss
@@ -4,15 +4,15 @@
 
   .m-marketingBlock__headline {
     color: $white;
-    font-size: 1.6rem;
-    line-height: .6;
+    font-size: 1.8rem;
+    line-height: 1.7rem;
     margin: 0;
     padding: 1rem 0 0;
   }
 
   .m-marketingBlock__body {
-    font-size: 1.3rem;
-    line-height: 1.5;
+    font-size: 1.5rem;
+    line-height: 1.7rem;
     margin: 0 auto;
     padding: 0;
     width: 60%;
