--- a/resources/styles/src/components/organisms/_o-capabilityBlocks.scss
+++ b/resources/styles/src/components/organisms/_o-capabilityBlocks.scss
@@ -2,11 +2,15 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  padding-top: 3rem;
+  padding-top: 1rem;
   width: 100%;
 
   .o-capabilityBlocks__block {
     padding-bottom: 1rem;
     width: 100%;
+
+    &:hover img {
+      transform: scale(1.1);
+    }
   }
 }
