--- a/resources/styles/src/components/organisms/_o-capabilityStack.scss
+++ b/resources/styles/src/components/organisms/_o-capabilityStack.scss
@@ -1,30 +1,34 @@
 .o-capabilityStack {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
 
   .o-capabilityStack__headline {
-    font-size: 3rem;
-    margin: 0;
-    padding: 6rem 1rem 0;
-    line-height: 1;
-    text-align: right;
-    text-transform: uppercase;
-    width: 50%;
+    display: flex;
+    flex: 0 1 100%;
+    justify-content: center;
   }
 
   .o-capabilityStack__topDecoration {
-    height: 3rem;
-    margin: 4rem 2rem 0 0;
+    align-self: center;
+    height: 20px;
+    margin: 0rem 0rem 0rem 2rem;
   }
 
   .o-capabilityStack__description {
-    text-align: right;
-    margin-left: 4rem;
-    width: 46%;
+    flex: 0 1 100%;
+    margin: 0 auto;
+    max-width: 800px;
+    text-align: center;
+    width: 95%;
   }
 
   .o-capabilityStack__stack {
+    display: flex;
+    flex: 0 1 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
     padding-top: 3rem;
     width: 100%;
   }
