--- a/resources/styles/src/components/organisms/_o-categoryLinks.scss
+++ b/resources/styles/src/components/organisms/_o-categoryLinks.scss
@@ -1,18 +1,26 @@
 .o-categoryLinks {
   display: flex;
-  height: 33vw;
+  justify-content: space-around;
+  height: 23vw;
   width: 100%;
 
   .o-categoryLinks__link {
     align-items: flex-end;
     background-size: contain;
     display: flex;
+    flex: 0 1 32%;
     height: 100%;
-    justify-content: center;
-    width: 33vw;
+    position: relative;
   }
 
   .o-categoryLinks__title {
+    background-color: #010066;
+    bottom: 0;
     color: $white;
+    left: 1rem;
+    padding: 1rem;
+    position: absolute;
+    width: 60%;
+    z-index: 2;
   }
 }
