--- a/resources/styles/src/components/organisms/_o-copyrightContent.scss
+++ b/resources/styles/src/components/organisms/_o-copyrightContent.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   padding: 1rem 0;
   font-size: .8rem;
+  width: 100%;
 
   @media(min-width: 768px) {
     flex-direction: row;
