--- a/resources/styles/src/index.scss
+++ b/resources/styles/src/index.scss
@@ -140,6 +140,9 @@
 /**
  * Vendor-specific overrides and settings
  */
+ 
+@import './vendor/slick';
+@import './vendor/slick-theme';
 // Dialog polyfill
 @import './vendor/dialog-polyfill';
 // Gravity forms
