fix style linting errors

--- a/resources/styles/src/components/organisms/_o-callToAction.scss
+++ b/resources/styles/src/components/organisms/_o-callToAction.scss
@@ -4,7 +4,7 @@
 
   .o-callToAction__titleLeft,
   .o-callToAction__titleRight {
-    margin: 1rem .5rem 0rem .5rem;
+    margin: 1rem .5rem 0rem;
     position: absolute;
     width: 1rem;
   }
