--- a/resources/styles/src/components/molecules/_m-footerLinks.scss
+++ b/resources/styles/src/components/molecules/_m-footerLinks.scss
@@ -6,10 +6,10 @@
     justify-content: center;
     list-style-type: none;
     margin: 0;
-    padding: 1rem 1rem 1rem;
+    padding: 1rem 1rem 1rem 0rem;
 
     @media(min-width: 768px) {
-      padding: 1rem 0 1rem;
+      padding: 1rem 0 1rem 0rem;
       justify-content: flex-start;
     }
 
