Home Page Styles
Slider and some page layout

--- a/resources/styles/src/components/organisms/_o-featureSlider.scss
+++ b/resources/styles/src/components/organisms/_o-featureSlider.scss
@@ -1,3 +1,11 @@
 .o-featureSlider {
   width: 100%;
 }
+
+.slick-track {
+  width: 100% !important;
+
+  .slick-slide {
+    width: 100% !important;
+  }
+}
