--- a/resources/styles/src/components/organisms/_o-capabilityStack.scss
+++ b/resources/styles/src/components/organisms/_o-capabilityStack.scss
@@ -12,7 +12,8 @@
 
   .o-capabilityStack__topDecoration {
     align-self: center;
-    height: 20px;
+    height: 40px;
+    width: 40px;
     margin: 0rem 0rem 0rem 2rem;
   }
 
