Getting back on track changes
styles

--- a/resources/styles/src/elements/_content-sectioning.scss
+++ b/resources/styles/src/elements/_content-sectioning.scss
@@ -38,13 +38,8 @@ h1.o-introContent__title {
   line-height: 3.8rem;
   margin: 0 auto;
   max-width: 800px;
-<<<<<<< HEAD
-  padding: 4rem 0rem 1rem 0rem;
+  padding: 4rem 0rem 1rem;
   text-align: center;
-=======
-  padding: 4rem 1rem 1rem;
-  text-align:center;
->>>>>>> parent of a61e35b... Home Page Styles
   text-transform: uppercase;
   width: 95%;
  }
@@ -64,8 +59,15 @@ h1.o-introContent__title {
   font-weight: $font-bold;
  }
 
- h3.m-sidebarTitle__text {
+ h3.m-sidebarTitle__text,
+ h3.m-featureSlider__title {
   text-transform: uppercase;
+ }
+
+ h3.m-featureSlider__title {
+  font-size: 3rem;
+  line-height: 2.8rem;
+  margin: 0px;
  }
 
  h3.o-callToAction__titleText {
