--- a/resources/styles/src/index.scss
+++ b/resources/styles/src/index.scss
@@ -105,6 +105,7 @@
 @import './components/molecules/m-capabilityRow';
 @import './components/molecules/m-ctaCard';
 @import './components/molecules/m-contactLinkBlock';
+@import './components/molecules/m-featureSlider';
 @import './components/molecules/m-footerContact';
 @import './components/molecules/m-footerLink';
 @import './components/molecules/m-footerLinks';
