--- a/resources/styles/src/index.scss
+++ b/resources/styles/src/index.scss
@@ -114,6 +114,7 @@
 @import './components/molecules/m-navigationRow';
 @import './components/molecules/m-productGrid';
 @import './components/molecules/m-sidebarTitle';
+@import './components/molecules/m-searchFields';
 
 
 // Organisms
