--- a/resources/styles/src/index.scss
+++ b/resources/styles/src/index.scss
@@ -101,6 +101,7 @@
 
 
 // Molecules
+@import './components/molecules/m-articlePreview';
 @import './components/molecules/m-capabilityBlock';
 @import './components/molecules/m-capabilityRow';
 @import './components/molecules/m-ctaCard';
@@ -117,6 +118,7 @@
 
 
 // Organisms
+@import './components/organisms/o-articleGrid';
 @import './components/organisms/o-bodyContent';
 @import './components/organisms/o-callToAction';
 @import './components/organisms/o-capabilityBlocks';
