Home and News styles, acfs

--- a/resources/styles/src/components/organisms/_o-industrySlider.scss
+++ b/resources/styles/src/components/organisms/_o-industrySlider.scss
@@ -1,3 +1,10 @@
+.o-industrySlider__description {
+  margin: 0 auto;
+  max-width: 800px;
+  text-align: center;
+  width: 95%;
+}
+
 .o-industrySlider {
   width: 100%;
 }
