--- a/resources/styles/src/components/organisms/_o-capabilityStack.scss
+++ b/resources/styles/src/components/organisms/_o-capabilityStack.scss
@@ -8,13 +8,12 @@
     display: flex;
     flex: 0 1 100%;
     justify-content: center;
-  }
-
-  .o-capabilityStack__topDecoration {
-    align-self: center;
-    height: 40px;
-    width: 40px;
-    margin: 0rem 0rem 0rem 2rem;
+    align-items: center;
+ 
+    .o-capabilityStack__topDecoration {
+      flex: 0 0 25px;
+      margin: 0 0 0 2rem;
+    }
   }
 
   .o-capabilityStack__description {
