--- a/resources/styles/src/components/organisms/_o-introContent.scss
+++ b/resources/styles/src/components/organisms/_o-introContent.scss
@@ -35,21 +35,21 @@
     color: $light-blue;
     max-width: 700px;
     text-align: center;
+
     .o-introContent__title {
+      align-items: center;
       display: flex;
+      flex: 0 1 100%;
       justify-content: center;
-      margin: 0;
 
       @media(max-width: 600px) {
         flex-direction: column;
       }
 
       .o-introContent__decoration {
-        align-self: center;
-        height: 40px;
-        width: 40px;
+        flex: 0 0 25px;
         margin: 0 0 0 2rem;
-
+    
         @media(max-width: 600px) {
           margin: 10px 0 0;
         }
