--- a/resources/styles/src/components/organisms/_o-sidebar.scss
+++ b/resources/styles/src/components/organisms/_o-sidebar.scss
@@ -2,4 +2,12 @@
   list-style: none;
   margin: 0 auto;
   padding: 0px;
+
+  .o-sidebar__item {
+    padding-bottom: 10px;
+
+    a {
+      color: $black;
+    }
+  }
 }
