--- a/resources/styles/src/components/pages/_homepage.scss
+++ b/resources/styles/src/components/pages/_homepage.scss
@@ -6,8 +6,22 @@
   }
 
   .homepage__industrySlider {
-    background-color: $grey;
-    min-height: 80vh;
+
+    h2 {
+      display: flex;
+      flex: 0 1 100%;
+      justify-content: center;
+      align-items: center;
+  
+      .m-industrySlider__topDecoration {
+        flex: 0 0 25px;
+        margin: 0 0 0 2rem;
+        
+        path {
+          width: 100%;
+        }
+      }
+    }
   }
 
   .homepage__footerLinks {
