--- a/resources/styles/src/elements/_content-sectioning.scss
+++ b/resources/styles/src/elements/_content-sectioning.scss
@@ -26,12 +26,15 @@ h1.o-introContent__title {
   color: $light-blue;
   font-size: 6rem;
   line-height: 5rem;
+  margin: 0px;
   text-transform: uppercase;
 }
 
  h2.o-capabilityStack__headline,
  h2.o-supplementaryContent__title,
- h2.o-productGrid__headline {
+ h2.o-productGrid__headline,
+ h2.o-videoContent__headline,
+ .homepage__industrySlider h2 {
   color: $blue;
   font-size: 4.6rem;
   font-weight: $font-bold;
