--- a/resources/styles/src/index.scss
+++ b/resources/styles/src/index.scss
@@ -110,6 +110,7 @@
 @import './components/molecules/m-footerLink';
 @import './components/molecules/m-footerLinks';
 @import './components/molecules/m-footerSocial';
+@import './components/molecules/m-industrySlider';
 @import './components/molecules/m-marketingBlock';
 @import './components/molecules/m-navigationRow';
 @import './components/molecules/m-productGrid';
@@ -118,6 +119,7 @@
 
 
 // Organisms
+@import './components/organisms/o-articleGrid';
 @import './components/organisms/o-bodyContent';
 @import './components/organisms/o-callToAction';
 @import './components/organisms/o-capabilityBlocks';
@@ -136,6 +138,7 @@
 @import './components/organisms/o-productGrid';
 @import './components/organisms/o-sidebar';
 @import './components/organisms/o-supplementaryContent';
+@import './components/organisms/o-videoContent';
 
 
 // Pages
