Styles for news grid

--- a/resources/styles/src/components/organisms/_o-articleGrid.scss
+++ b/resources/styles/src/components/organisms/_o-articleGrid.scss
@@ -3,6 +3,7 @@
   justify-content: space-around;
   margin: auto;
   max-width: 1300px;
+  width: 95%;
 
   .o-articleGrid__article {
     flex: 0 1 31%;
