--- a/resources/styles/src/components/organisms/_o-supplementaryContent.scss
+++ b/resources/styles/src/components/organisms/_o-supplementaryContent.scss
@@ -17,8 +17,8 @@
     flex: 0 1 100%;
     justify-content: center;
     margin: 0;
-
     @media(min-width: 640px) {
+      color: $black;
     }
 
     .o-supplementaryContent__topDecoration {
