News and Solution Landing Sidebar

--- a/resources/styles/src/components/molecules/_m-articlePreview.scss
+++ b/resources/styles/src/components/molecules/_m-articlePreview.scss
@@ -1,7 +1,11 @@
 .m-articlePreview {
   a {
-      .m-articlePreview__date {
+    .m-articlePreview__date {
       color: #333;
     }
-  }
+
+    p {
+      color: #333;
+    }
+  }  
 }
