--- a/resources/styles/src/components/organisms/_o-sidebar.scss
+++ b/resources/styles/src/components/organisms/_o-sidebar.scss
@@ -1,7 +1,61 @@
+.o-sidebar.o-sidebar--caseStudies {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
+  flex: 0 1 100%;
+  
+  .o-sidebar__widget {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex: 0 1 100%;
+
+    .m-sidebarTitle {
+      width: 100%;
+
+      .m-sidebarTitle__flag {
+        flex: 0 0 12px;
+        margin: 0 2rem 0 0;
+      }
+    }
+  }
+}
+
+.newsCategory__newsSidebar {
+
+  .o-sidebar {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 1300px;
+    width: 95%;
+
+    .o-sidebar__widget {
+      display: flex;
+      flex: 0 1 40%;
+      flex-direction: row;
+      flex-wrap: wrap;
+      padding: 0 3rem;
+
+      .o-sidebar__list {
+        flex: 0 1 100%;
+        list-style: none;
+        margin: 0 auto;
+        padding: 0;
+      }
+    }
+  }
+}
+
 .o-sidebar__list {
   list-style: none;
   margin: 0 auto;
   padding: 0px;
+  flex: 0 1 100%;
 
   .o-sidebar__item {
     padding-bottom: 10px;
