--- a/resources/styles/src/components/pages/_newsCategory.scss
+++ b/resources/styles/src/components/pages/_newsCategory.scss
@@ -1,3 +1,12 @@
 .newsCategory__intro {
   padding-top: 10rem;
 }
+
+.newsCategory__articleGrid {
+  padding-bottom: 2rem;
+}
+
+.newsCategory__newsSidebar {
+  background-color: #e2e2e2;
+  padding-bottom: 2rem;
+ }
