--- a/resources/styles/src/components/pages/_solutionLanding.scss
+++ b/resources/styles/src/components/pages/_solutionLanding.scss
@@ -20,7 +20,7 @@
   width: 95%;
 }
 #caseStudies-wrapper {
-  background-color: #ededed;
+  background-color: #e2e2e2;
   display: flex;
   margin: 0 auto;
   padding-bottom: 2rem;
