--- a/resources/styles/src/components/molecules/_m-sidebarTitle.scss
+++ b/resources/styles/src/components/molecules/_m-sidebarTitle.scss
@@ -1,4 +1,5 @@
-.solutionLanding__caseStudies {
+.solutionLanding__caseStudies,
+.solutionLanding__resources {
   .m-sidebarTitle__text {
     align-items: flex-start;
     display: flex;
