--- a/resources/styles/src/components/pages/_categoryContact.scss
+++ b/resources/styles/src/components/pages/_categoryContact.scss
@@ -2,6 +2,10 @@
 
   .categoryContact__intro {
     padding-top: 10rem;
+
+    @media(max-width: 800px) {
+      padding-top: 8rem;
+    }
   }
 }
 
@@ -17,8 +21,18 @@
 
 .categoryContact__contactForm {
   flex: 0 1 70%;
+  padding-right: 3rem;
+
+  @media(max-width: 780px) {
+    flex: 0 1 100%;
+    padding-right: 0rem;
+  }
 }
 
 .categoryContact__contactLinks {
   flex: 0 1 30%;
+
+  @media(max-width: 780px) {
+    flex: 0 1 100%;
+  }
 }
