--- a/resources/styles/src/components/pages/_newsCategory.scss
+++ b/resources/styles/src/components/pages/_newsCategory.scss
@@ -1,5 +1,9 @@
 .newsCategory__intro {
   padding-top: 10rem;
+
+  @media(max-width: 800px) {
+    padding-top: 8rem;
+  }
 }
 
 .newsCategory__articleGrid {
