--- a/resources/styles/src/components/atoms/_a-linkBlockLabel.scss
+++ b/resources/styles/src/components/atoms/_a-linkBlockLabel.scss
@@ -3,14 +3,26 @@
   background-color: rgba(26,42,52,.8);
   bottom: 0;
   display: flex;
-  height: 15%;
   margin: 0;
-  padding: 0 20px;
   position: absolute;
   width: 100%;
 
   .a-linkBlockLabel__title {
+    align-items: center;
     color: #fff;
+    display: flex;
     font-size: 1.5rem;
+    flex: 0 1 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 1rem;
+    position: relative;
+
+    .a-linkBlockLabel__flag {
+      position: absolute;
+      right: 0px;
+      top: 0px;
+      width: 1.6rem;
+    }
   }
 }
