--- a/resources/styles/src/components/molecules/_m-capabilityBlock.scss
+++ b/resources/styles/src/components/molecules/_m-capabilityBlock.scss
@@ -20,6 +20,10 @@
   .m-capabilityBlock__description {
     color: #333;
     margin: 2rem;
+
+    @media(max-width: 640px) {
+      margin: 1rem 2rem 2rem;
+    }
   }
 
   .m-capabilityBlock__mediaBlock {
@@ -43,6 +47,10 @@
       position: relative;
       width: calc(100% - 3.2rem);
       z-index: 1;
+
+      @media(max-width: 640px) {
+        width: 100%;
+      }
     }
 
     .m-capabilityBlock__label {
@@ -50,13 +58,23 @@
       margin: 0;
       padding: 0;
       position: absolute;
-      left: 20%;
+      left: auto;
       bottom: 0px;
+      right: 0px;
       width: 80%;
       z-index: 2;
 
+      @media(max-width: 900px) {
+        width: 100%;
+      }
+
       &.m-capabilityBlock__label--reverse {
         left: 0;
+        right: auto;
+
+        @media(max-width: 900px) {
+          width: 100%;
+        }
       }
     }
   }
