--- a/resources/styles/src/components/molecules/_m-featureSlider.scss
+++ b/resources/styles/src/components/molecules/_m-featureSlider.scss
@@ -13,6 +13,11 @@
     position: absolute;
     right: 1rem;
     width: 55%;
+
+    @media(max-width: 800px) {
+      width: 95%;
+    }
+
     h3.m-featureSlider__title {
       color: $white;
     }
