--- a/resources/styles/src/components/molecules/_m-marketingBlock.scss
+++ b/resources/styles/src/components/molecules/_m-marketingBlock.scss
@@ -16,6 +16,10 @@
     margin: 0 auto;
     padding: 0;
     width: 60%;
+
+    @media(max-width: 800px) {
+      width: 90%;
+    }
   }
 
   .m-marketingBlock__decoration {
