--- a/resources/styles/src/components/organisms/_o-categoryLinks.scss
+++ b/resources/styles/src/components/organisms/_o-categoryLinks.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-around;
   height: 23vw;
+  padding-top: 3rem;
   width: 100%;
 
   .o-categoryLinks__link {
