--- a/resources/styles/src/components/organisms/_o-footerContent.scss
+++ b/resources/styles/src/components/organisms/_o-footerContent.scss
@@ -1,11 +1,12 @@
 .o-footerContent{
   align-items: center;
   background-color: $grey;
-  margin-top: 2rem;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: center;
+  margin-top: 2rem;
+  padding: 2rem 0rem 0rem;
   width: 100%;
 
   @media(min-width: 768px) {
@@ -20,22 +21,37 @@
     max-width: 1000px;
     width: 95%;
 
-    .o-footerContent__logoContainer {
-      padding: 2rem;
-      flex: 0 1 30%;
+    @media(max-width: 600px) {
+      flex-wrap: wrap;
+    }
 
-      @media(min-width: 768px) {
-        flex: 0 1 30%;
-        padding: 4rem 2rem;
+    .o-footerContent__logoContainer {
+      display: flex;
+      flex: 0 1 40%;
+      padding: 4rem 4rem 4rem 0rem;
+
+      @media(max-width: 600px) {
+        flex: 0 1 80%;
+        justify-content: center;
+        padding: 0px;
       }
 
       .o-footerContent__logo {
+        align-self: center;
         width: 100%;
+
+        @media(max-width: 600px) {
+          width: 70%;
+        }
       }
     }
 
     .o-footerContent__body {
       flex: 0 1 70%;
+
+      @media(max-width: 600px) {
+        flex: 0 1 100%;
+      }
     }
   }
 }
