--- a/resources/styles/src/components/pages/_generalLanding.scss
+++ b/resources/styles/src/components/pages/_generalLanding.scss
@@ -22,11 +22,8 @@
 
   .generalLanding__bodyContent {
     margin: 0 auto;
+    max-width: 1000px;
     width: 95%;
-
-    @media(min-width: 640px) {
-      width: 70%;
-    }
   }
 }
 
