--- a/resources/styles/src/elements/_content-sectioning.scss
+++ b/resources/styles/src/elements/_content-sectioning.scss
@@ -28,6 +28,11 @@ h1.o-introContent__title {
   line-height: 5rem;
   margin: 0px;
   text-transform: uppercase;
+
+  @media(max-width: 900px) {
+    font-size: 5rem;
+    line-height: 4.8rem;
+  }
 }
 
  h2.o-capabilityStack__headline,
@@ -45,6 +50,15 @@ h1.o-introContent__title {
   text-align: center;
   text-transform: uppercase;
   width: 95%;
+
+  @media(max-width: 900px) {
+    font-size: 3.8rem;
+    line-height: 3.5rem;
+  }
+
+  @media(max-width: 600px) {
+    padding: 3rem 0 1rem;
+  }
  }
 
  h2.a-rowLabel__title,
@@ -53,6 +67,15 @@ h1.o-introContent__title {
   line-height: 1;
   margin: 0px;
   padding: 1rem;
+
+  @media(max-width: 780px) {
+    font-size: 2rem;
+  }
+
+  @media(max-width: 600px) {
+    font-size: 1.4rem;
+    padding: .8rem 1rem;
+  }
  }
 
  h3,
@@ -61,6 +84,10 @@ h1.o-introContent__title {
   color: $blue;
   font-size: 2rem;
   font-weight: $font-bold;
+ }
+
+ h3.m-capabilitiesBlock__headline {
+  color: $white;
  }
 
  h3.m-sidebarTitle__text,
