--- a/resources/styles/src/components/pages/_categoryContact.scss
+++ b/resources/styles/src/components/pages/_categoryContact.scss
@@ -6,6 +6,10 @@
     @media(max-width: 800px) {
       padding-top: 8rem;
     }
+
+    @media(max-width: 768px) {
+      padding-top: 1.5rem;
+    }
   }
 }
 
