--- a/resources/styles/src/components/pages/_newsCategory.scss
+++ b/resources/styles/src/components/pages/_newsCategory.scss
@@ -1,8 +1,18 @@
+.newsCategory__pageBanner {
+  margin: 0 auto;
+  max-width: 1300px;
+  padding-top: 1rem;
+}
+
 .newsCategory__intro {
   padding-top: 10rem;
 
   @media(max-width: 800px) {
     padding-top: 8rem;
+  }
+
+  @media(max-width: 768px) {
+    padding-top: 1.5rem;
   }
 }
 
