--- a/resources/styles/src/index.scss
+++ b/resources/styles/src/index.scss
@@ -128,6 +128,7 @@
 @import './components/organisms/o-capabilityBlocks';
 @import './components/organisms/o-capabilityStack';
 @import './components/organisms/o-categoryLinks';
+@import './components/organisms/o-contactForm';
 @import './components/organisms/o-contactLinks';
 @import './components/organisms/o-copyrightContent';
 @import './components/organisms/o-featuredImage';
