--- a/resources/styles/src/components/atoms/_a-linkBlockLabel.scss
+++ b/resources/styles/src/components/atoms/_a-linkBlockLabel.scss
@@ -1,6 +1,6 @@
 .a-linkBlockLabel {
   align-items: center;
-  background-color: rgba(26,42,52,.8);
+  background: linear-gradient(135deg, rgba(0,0,0,.8), rgba(0,0,152,.8), rgba(0,0,0,.8));
   bottom: 0;
   display: flex;
   margin: 0;
