--- a/resources/styles/src/components/molecules/_m-capabilityBlock.scss
+++ b/resources/styles/src/components/molecules/_m-capabilityBlock.scss
@@ -54,7 +54,7 @@
     }
 
     .m-capabilityBlock__label {
-      background-color: $black-80;
+      background: linear-gradient(135deg, rgba(0,0,0,.8), rgba(0,0,152,.8), rgba(0,0,0,.8));
       margin: 0;
       padding: 0;
       position: absolute;
