--- a/resources/styles/src/components/molecules/_m-capabilityRow.scss
+++ b/resources/styles/src/components/molecules/_m-capabilityRow.scss
@@ -21,8 +21,7 @@
   }
 
   .m-capabilityRow__label {
-    background-color: $black-80;
-    /*bottom: calc(100% + 2rem);*/
+    background: linear-gradient(135deg, rgba(0,0,0,.8), rgba(0,0,152,.8), rgba(0,0,0,.8));
     bottom: 0px;
     right: 0px;
     position: absolute;
