--- a/resources/styles/src/components/molecules/_m-productGrid.scss
+++ b/resources/styles/src/components/molecules/_m-productGrid.scss
@@ -17,10 +17,15 @@
     flex-direction: column;
     font-size: 1.5rem;
     height: 15%;
+    line-height: 2rem;
     margin: 0px;
     padding: 0px;
     position: absolute;
     width: 100%;
+
+    @media(max-width: 1000px) {
+      height: 18%;
+    }
 
     .m-productGrid__arrow {
       align-self: flex-end;
