--- a/resources/styles/src/components/organisms/_o-capabilitiesBlock.scss
+++ b/resources/styles/src/components/organisms/_o-capabilitiesBlock.scss
@@ -1,15 +1,42 @@
+.o-capabilitiesBlock  {
+  margin: 0 auto;
+  max-width: 1300px;
+  width: 95%;
+}
+
+.o-capabilitiesBlock__title {
+  align-items: center;
+  display: flex;
+  flex: 0 1 100%;
+  justify-content: center;
+  margin: 0;
+
+  .o-capabilitiesBlock__topDecoration {
+    flex: 0 0 25px;
+    margin: 0 0 0 2rem;
+  }
+}
+
 .o-capabilitiesBlock__block {
   position: relative;
   line-height: 0px;
 }
 
 .o-capabilitiesSlider__wrapper {
-  background: rgba(26,42,52,.8);
-  padding: 0rem 4rem 2rem;
+  background: linear-gradient(135deg, rgba(0,0,0,.8), rgba(0,0,152,.8), rgba(0,0,0,.8));
+  padding: 0rem 0rem 2rem;
   position: absolute;
-  right: 0px;
-  top: 0px;
+  right: 1rem;
+  top: 1rem;
   width: 50%;
+
+  @media(max-width: 768px) {
+    width: 70%;
+  }
+
+  @media(max-width: 600px) {
+    width: 100%;
+  }
 
   .a-rowLabel__flag {
     position: absolute;
@@ -17,14 +44,11 @@
     top: 0px;
     width: 2.4rem;
   }
-  .o-supplementaryContent__title {
-    color: $white;
-  }
 
   .o-capabilitiesSlider.slick-slider {
 
     div {
-      color: $white;
+      color: $yellow;
       line-height: 1.4rem;
     }
   }
