--- a/resources/styles/src/components/organisms/_o-productGrid.scss
+++ b/resources/styles/src/components/organisms/_o-productGrid.scss
@@ -28,6 +28,18 @@
     line-height: 0px;
     overflow: hidden;
 
+    @media(max-width: 600px) {
+      flex: 0 1 50%;
+    }
+
+    @media(max-width: 600px) {
+      flex: 0 1 50%;
+    }
+
+    @media(max-width: 400px) {
+      flex: 0 1 100%;
+    }
+
     &:hover img {
       transform: scale(1.2);
     }
