--- a/resources/styles/src/components/organisms/_o-videoContent.scss
+++ b/resources/styles/src/components/organisms/_o-videoContent.scss
@@ -20,9 +20,28 @@
   .o-videoContent__container {
     display: flex;
     flex: 0 1 50%;
+    flex-wrap: wrap;
+
+    @media(max-width: 600px) {
+      flex: 0 1 100%;
+    }
   }
 
   .o-videoContent__video {
     flex: 0 1 50%;
+    padding-left: 4rem;
+
+    @media(max-width: 700px) {
+      padding-left: 1rem;
+    }
+
+    @media(max-width: 600px) {
+      flex: 0 1 100%;
+      padding-left: 0rem;
+    }
+
+    iframe {
+      width: 100%;
+    }
   }
 }
