--- a/resources/styles/src/components/pages/_homepage.scss
+++ b/resources/styles/src/components/pages/_homepage.scss
@@ -2,7 +2,6 @@
 
   .homepage__featureSlider {
     background-color: $grey;
-    min-height: 80vh;
   }
 
   .homepage__industrySlider {
@@ -25,6 +24,23 @@
   .homepage__footerLinks {
     width: 100%;
   }
+}
+
+.slick-next,
+.slick-prev {
+  background-color: $red !important;
+  height: 40px !important;
+  padding: 10px 15px 15px !important;
+  width: 40px !important;
+  z-index: 50000;
+}
+
+.slick-prev {
+  left: 8px !important;
+}
+
+.slick-next {
+  right: 8px !important;
 }
 
 #marketingBlocks {
