--- a/resources/styles/src/elements/_content-sectioning.scss
+++ b/resources/styles/src/elements/_content-sectioning.scss
@@ -31,7 +31,12 @@ h1.o-introContent__title {
 
   @media(max-width: 900px) {
     font-size: 5rem;
-    line-height: 4.8rem;
+    line-height: 4.6rem;
+  }
+
+  @media(max-width: 500px) {
+    font-size: 3.8rem;
+    line-height: 3.4rem;
   }
 }
 
@@ -39,6 +44,7 @@ h1.o-introContent__title {
  h2.o-supplementaryContent__title,
  h2.o-productGrid__headline,
  h2.o-videoContent__headline,
+ h2.o-capabilitiesBlock__title,
  .homepage__industrySlider h2 {
   color: $blue;
   font-size: 4.6rem;
@@ -46,10 +52,14 @@ h1.o-introContent__title {
   line-height: 3.8rem;
   margin: 0 auto;
   max-width: 800px;
-  padding: 4rem 0rem 1rem;
+  padding: 4rem 0rem 2rem;
   text-align: center;
   text-transform: uppercase;
   width: 95%;
+
+  @media(min-width: 1500px) {
+    max-width: 80%;
+  }
 
   @media(max-width: 900px) {
     font-size: 3.8rem;
@@ -62,7 +72,8 @@ h1.o-introContent__title {
  }
 
  h2.a-rowLabel__title,
- h2.a-blockLabel__title {
+ h2.a-blockLabel__title,
+ h3.m-industrySlider__title {
   font-size: 2.5rem;
   line-height: 1;
   margin: 0px;
