Media Query Styles

--- a/resources/styles/src/components/pages/_newsCategory.scss
+++ b/resources/styles/src/components/pages/_newsCategory.scss
@@ -23,4 +23,13 @@
 .newsCategory__newsSidebar {
   background-color: #e2e2e2;
   padding-bottom: 2rem;
+  margin: 0 auto;
+  max-width: 1300px;
+  width: 95%;
+ }
+
+ .newsCategory__categoryLinks {
+  margin: 0 auto;
+  max-width: 1300px;
+  width: 95%;
  }
