--- a/resources/styles/src/components/molecules/_m-searchFields.scss
+++ b/resources/styles/src/components/molecules/_m-searchFields.scss
@@ -1,13 +1,13 @@
 .m-search-field {
     background-color: transparent;
     background-image: url(../../images/src/search-icon.png);
-    background-position: 5px center;
+    background-position: 0px center;
     background-repeat: no-repeat;
     background-size: 24px 24px;
     border: none;
     cursor: pointer;
     height: 37px;
-    margin: 3px 0;
+    margin: 3px 10px 3px 0;
     padding: 0 0 0 34px;
     position: relative;
     -webkit-transition: width 400ms ease, background 400ms ease;
