Styling of Footer CTA Links, General Category Links, misc

--- a/resources/styles/src/elements/_content-sectioning.scss
+++ b/resources/styles/src/elements/_content-sectioning.scss
@@ -97,6 +97,13 @@ h1.o-introContent__title {
   font-weight: $font-bold;
  }
 
+ h3.m-footerLink__title,
+ h3.o-categoryLinks__title {
+  font-size: 1.5rem;
+  padding: .8rem 1rem;
+  width: auto;
+ }
+
  h3.m-capabilitiesBlock__headline {
   color: $white;
  }
