--- a/resources/styles/src/components/molecules/_m-featureSlider.scss
+++ b/resources/styles/src/components/molecules/_m-featureSlider.scss
@@ -8,11 +8,11 @@
 
   .m-featureSlider__content {
     background: linear-gradient(135deg, rgba(0,0,152,.8), rgba(0,0,0,.8));
-    bottom: 1rem;
+    bottom: 5rem;
     padding: 2rem;
     position: absolute;
-    right: 1rem;
-    width: 55%;
+    right: 8px;
+    width: 35%;
 
     @media(max-width: 800px) {
       width: 95%;
