--- a/resources/styles/src/components/organisms/_o-capabilitiesBlock.scss
+++ b/resources/styles/src/components/organisms/_o-capabilitiesBlock.scss
@@ -13,7 +13,7 @@
 
   .o-capabilitiesBlock__topDecoration {
     flex: 0 0 25px;
-    margin: 0 0 0 2rem;
+    margin: 0 -40px 0 40px;
   }
 }
 
@@ -50,6 +50,7 @@
     div {
       color: $yellow;
       line-height: 1.4rem;
+      padding: 0 15px;
     }
   }
 }
