--- a/resources/styles/src/components/organisms/_o-capabilityStack.scss
+++ b/resources/styles/src/components/organisms/_o-capabilityStack.scss
@@ -12,7 +12,7 @@
 
     .o-capabilityStack__topDecoration {
       flex: 0 0 25px;
-      margin: 0 0 0 2rem;
+      margin: 0 -40px 0 40px;
     }
   }
 
