--- a/resources/styles/src/components/organisms/_o-introContent.scss
+++ b/resources/styles/src/components/organisms/_o-introContent.scss
@@ -48,7 +48,7 @@
 
       .o-introContent__decoration {
         flex: 0 0 25px;
-        margin: 0 0 0 2rem;
+        margin: 0 -40px 0 40px;
         @media(max-width: 600px) {
           margin: 10px 0 0;
         }
