--- a/resources/styles/src/components/organisms/_o-videoContent.scss
+++ b/resources/styles/src/components/organisms/_o-videoContent.scss
@@ -13,7 +13,7 @@
 
     .o-videoContent__topDecoration {
       flex: 0 0 25px;
-      margin: 0 0 0 2rem;
+      margin: 0 -40px 0 40px;
     }
   }
 
