--- a/resources/styles/src/components/pages/_homepage.scss
+++ b/resources/styles/src/components/pages/_homepage.scss
@@ -13,7 +13,7 @@
       align-items: center;
       .m-industrySlider__topDecoration {
         flex: 0 0 25px;
-        margin: 0 0 0 2rem;
+        margin: 0 -40px 0 40px;
         path {
           width: 100%;
         }
@@ -29,10 +29,13 @@
 .slick-next,
 .slick-prev {
   background-color: $red !important;
+  bottom: 10px;
   height: 40px !important;
   padding: 10px 15px 15px !important;
+  top: auto !important;
+  padding: 0 15px !important;
   width: 40px !important;
-  z-index: 50000;
+  z-index: 1;
 }
 
 .slick-prev {
