--- a/resources/styles/src/components/pages/_homepage.scss
+++ b/resources/styles/src/components/pages/_homepage.scss
@@ -33,6 +33,7 @@
   height: 40px !important;
   padding: 10px 15px 15px !important;
   top: auto !important;
+  transform: none !important;
   padding: 0 15px !important;
   width: 40px !important;
   z-index: 1;
