--- a/resources/styles/src/components/molecules/_m-capabilityBlock.scss
+++ b/resources/styles/src/components/molecules/_m-capabilityBlock.scss
@@ -29,6 +29,27 @@
   .m-capabilityBlock__mediaBlock {
     overflow: hidden;
 
+    &:after {
+      content: '\A';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: rgba(1,0,102,0.5);
+      opacity: 0;
+      transition: all 1s;
+      -webkit-transition: all 1s;
+      z-index: 1;
+    }
+
+    &:hover {
+
+      &:after {
+        opacity: 1;
+      }
+    }
+
     .m-capabilityBlock__image {
       transform: scale(1);
       transition: .5s ease-in-out;
