--- a/resources/styles/src/components/organisms/_o-introContent.scss
+++ b/resources/styles/src/components/organisms/_o-introContent.scss
@@ -59,6 +59,10 @@
       font-weight: $font-semibold;
       justify-content: center;
       padding-top: .5rem;
+
+       ul {
+        text-align: left;
+       }
     }
   }
 }
